<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TSPAccount</string>
    <string name="my_Message">my message</string>
    <string name="remaining_Data">surplus flow:</string>
    <string name="userName">nickname</string>
    <string name="phoneNumber">phone number</string>
    <string name="authentication">authentication</string>
    <string name="vehicleBinding">bind my car</string>
    <string name="bind_device">bind my device</string>
    <string name="change">change</string>
    <string name="authentication_num">authenticated</string>
    <string name="car_info">ford kuga</string>
    <string name="tip_txt">hint</string>
    <string name="ok_txt">confirm</string>
    <string name="confirm_txt">affirm</string>
    <string name="cancel_txt">cancel</string>
    <string name="bind_car">bind vehicle information</string>
    <string name="qr_bind_device">scan the qr code and bind my device</string>
    <string name="plate_number">plate no:</string>
    <string name="engine_number">engine no:</string>
    <string name="vin_number">vin no:</string>
    <string name="scan_qr_code">scan the qr code</string>
    <string name="bind_code_info">the vehicle binding allows you to see your\nvehicle information and add more devices</string>
    <string name="already_purchased_service">services purchased</string>
    <string name="device_num">device no:</string>
    <string name="sim_num">SIM no:</string>
    <string name="imei_num">IMEI no:</string>
    <string name="no_data">no data</string>
    <string name="logout">logout</string>
    <string name="network_not_connected_please_check_the_network"> network no connected,\n please check the network!</string>
    <string name="failed_to_get_product_information">failed to get product information.</string>
    <string name="network_not_connected_check_the_network">network not connected please check the network</string>
    <string name="network_failure">request data failure!</string>
    <string name="logout_failure">logout failure!</string>
    <string name="login_has_expired_please_login_again">login has expired,please login again。</string>
    <string name="failed_to_get_device_information">failed to get device information.</string>
    <string name="unread">unread</string>
    <string name="article">article</string>
    <string name="you_did_not_login_please_login">you did not login,please login:)</string>
    <string name="are_you_sure_to_quit_your_account">are you sure to quit your account ?</string>
    <string name="exiting_account">exiting account...</string>
    <string name="failed_to_get_user_information">failed to get user information.</string>
    <string name="no_binding">no binding</string>
    <string name="has_bind">has bind</string>
    <string name="failed_to_obtain_vehicle_information">failed to obtain vehicle information.</string>
    <string name="non_purchased">non-purchased</string>
    <string name="purchased">purchased</string>
    <string name="the_rescue_package">rescue package</string>
    <string name="video_package">video package</string>
    <string name="music_package">music package</string>
    <string name="basic_package">basic package</string>
    <string name="failed_to_logout">failed to logout</string>
    <string name="please_in_app">please in app</string>
    <string name="flow_management">&#034;flow management&#034;</string>
    <string name="a_key_to_rescue">&#034;a key to rescue&#034;</string>
    <string name="purchase_service">purchase service</string>
    <string name="vin_empty">vin empty</string>
    <string name="ICCID_empty">ICCID failure</string>
    <string name="data_encryption_failed">data encryption failed</string>
    <string name="vin_no_get">no vin</string>
    <string name="rescue_card_has_been_purchased">rescue card has been purchased</string>
    <string name="no_rescue_card_were_purchased">no rescue card were purchased</string>
    <string name="purchased_music_members">purchased music members</string>
    <string name="no_music_member_purchased">no music member purchased</string>
    <string name="get_ICCID">GET ICCID</string>
</resources>