<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activities.AlreadyPurchasedServiceActivity">
    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/account_background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/x100"
            android:layout_marginRight="@dimen/x100"
            android:layout_weight="3.5">
        </android.support.v7.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/x105"
                android:layout_marginBottom="@dimen/y75"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_in_app"
                    android:textColor="@color/password_text"
                    android:textSize="@dimen/x43" />
                <TextView
                    android:id="@+id/flow_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flow_management"
                    android:textColor="@color/password_text"
                    android:textSize="@dimen/x43"
                    android:layout_marginLeft="@dimen/x20"/>
                <TextView
                    android:id="@+id/a_key_to_rescue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_key_to_rescue"
                    android:textColor="@color/password_text"
                    android:textSize="@dimen/x43"
                    android:layout_marginLeft="@dimen/x20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_service"
                    android:textColor="@color/password_text"
                    android:textSize="@dimen/x43"
                    android:layout_marginLeft="@dimen/x20"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
