<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.desay_svautomotive.tspaccount.Activities.VehicleBindingActivity">
    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/account_background"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/has_binding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4.5"
                    android:layout_marginLeft="@dimen/x95"
                    android:background="@color/bind_Left"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.8"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="@dimen/x88"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/no_bg"
                                android:layout_marginLeft="@dimen/x45"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/plate_number"
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x44"/>
                            <TextView
                                android:id="@+id/car_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text=""
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x40"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:background="@color/bind_Left_1">
                            <ImageView
                                android:layout_width="@dimen/x85"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/engine_bg"
                                android:layout_marginLeft="@dimen/x45"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/engine_number"
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x47"/>
                            <TextView
                                android:id="@+id/engine"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text=""
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x40"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="@dimen/x88"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/vin_bg"
                                android:layout_marginLeft="@dimen/x45"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/vin_number"
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x44"/>
                            <TextView
                                android:id="@+id/vin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text=""
                                android:textSize="@dimen/x53"
                                android:layout_marginLeft="@dimen/x40"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.1">
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/car_picture"
                    android:layout_width="@dimen/x632"
                    android:layout_height="@dimen/y330"
                    android:src="@mipmap/img_car"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/x65"
                    android:layout_marginBottom="@dimen/y215"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/no_binding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="visible">
            <RelativeLayout
                android:id="@+id/qr_re"
                android:layout_width="@dimen/x500"
                android:layout_height="@dimen/x500"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y135"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/app_qr_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/x15"
                    android:scaleType="fitXY" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:textColor="@color/account_info"
                android:textSize="@dimen/x60"
                android:layout_marginTop="@dimen/y25"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_code_info"
                android:textColor="@color/account_info"
                android:textSize="@dimen/x58"
                android:gravity="center"
                android:layout_marginTop="@dimen/y10"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
