<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.desay_svautomotive.tspaccount.Activities.DeviceBindingActivity">
    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/account_background"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/has_binding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4.5"
                    android:layout_marginLeft="@dimen/x95"
                    android:background="@color/bind_Left"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.8"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="@dimen/x88"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/no_bg"
                                android:layout_marginLeft="@dimen/x42"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/device_num"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x40"/>
                            <TextView
                                android:id="@+id/device_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text="XXX"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x38"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:background="@color/bind_Left_1">
                            <ImageView
                                android:layout_width="@dimen/x88"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/sim"
                                android:layout_marginLeft="@dimen/x42"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/sim_num"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x40"/>
                            <TextView
                                android:id="@+id/sim_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text="XXX"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x38"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="@dimen/x88"
                                android:layout_height="@dimen/y62"
                                android:src="@mipmap/imei"
                                android:layout_marginLeft="@dimen/x42"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_Grey"
                                android:text="@string/imei_num"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x40"/>
                            <TextView
                                android:id="@+id/imei_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_White"
                                android:text="XXX"
                                android:textSize="@dimen/x50"
                                android:layout_marginLeft="@dimen/x38"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.1">
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/device_picture"
                    android:layout_width="@dimen/x624"
                    android:layout_height="@dimen/y320"
                    android:src="@mipmap/img_car"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/x60"
                    android:layout_marginBottom="@dimen/y215"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/no_binding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="visible">
            <RelativeLayout
                android:id="@+id/qr_re"
                android:layout_width="@dimen/x550"
                android:layout_height="@dimen/x550"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y130"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/app_qr_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/x13"
                    android:scaleType="fitXY" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_bind_device"
                android:textColor="@color/account_info"
                android:textSize="@dimen/x60"
                android:layout_marginTop="@dimen/y60"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
